--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -230,7 +230,7 @@ body {
 
 .footer-section ul li a {
   text-decoration: none;
-  color: #333;
+  color: #f8f2f2;
 }
 
 .footer-section ul li a:hover {
